# obsidian-ee

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  PONYTAIL-DEBT.md  README.md  TECH-DEBT-AUDIT.md  clippy.toml  demo.cast  deny.toml
.cargo/: config.toml
.claude/: ralph-loop.local.md  settings.json
.claude/hooks/: eslint-changed.mjs  typecheck-plugin.mjs
.claude/skills/ponytail-debt/: SKILL.md
.github/workflows/: ci.yml
crates/collab-cli/: Cargo.toml
crates/collab-cli/src/: commands.rs  lib.rs  main.rs
crates/collab-core/: Cargo.toml
crates/collab-core/src/: connection.rs  document.rs  encryption.rs  lib.rs  mls.rs  registry.rs  vault_manifest.rs  vault_sync.rs
crates/collab-proto/: Cargo.toml
crates/collab-proto/src/: lib.rs
crates/collab-relay/: Cargo.toml
crates/collab-relay/src/: lib.rs  main.rs  relay.rs  routing.rs  storage.rs
crates/collab-relay/tests/: integration.rs
crates/collab-wasm/: Cargo.toml
crates/collab-wasm/src/: lib.rs
crates/collab-watcher/: Cargo.toml
crates/collab-watcher/src/: lib.rs  watcher.rs
docker/: Dockerfile.relay  docker-compose.yml
docker/localstack-init/: init-aws.sh
docs/: architecture.md  crate-guide.md  demo.tape  development.md  plugin-guide.md  protocol.md  security.md
docs/design/: 2026-07-23-issue-24-26-bdd-realwasm.md
docs/plans/: 2026-02-04-e2e-completion.md  obsidian-plugin-plan.md
docs/v2/: p2p-architecture.md  signal-protocol-evaluation.md  waku-evaluation.md
docs/v2/sota/: README.md  eclipse-attacks.md  ip-address-leakage.md  mls-epoch-desync.md  split-brain-groups.md  sybil-attacks.md  welcome-message-loss.md
plugins/obsidian-ee/: .gitignore  esbuild.config.mjs  eslint.config.js  jest.config.js  jest.esm.config.mjs  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
plugins/obsidian-ee/e2e/: mock-relay.ts  two-user-sync.spec.ts
plugins/obsidian-ee/e2e/fixtures/test-vault/.obsidian/: app.json  appearance.json
plugins/obsidian-ee/src/: collab-client.ts  editor-sync.ts  main.ts
plugins/obsidian-ee/src/__mocks__/: obsidian.ts
plugins/obsidian-ee/src/__tests__/: collab-client.test.ts  editor-sync.test.ts  encryption-integration.test.ts  main.test.ts  two-user-integration.test.ts  wasm-integration.test.ts
plugins/obsidian-ee/src/__tests__/helpers/: load-real-wasm.ts
scripts/: build-wasm.sh  demo-scenario.sh  e2e-test.sh  record-demo.sh
tests/e2e-tests/: Cargo.toml
tests/e2e-tests/src/: helpers.rs  lib.rs
tests/e2e-tests/tests/: auto_connect.rs  file_watcher.rs  full_flow.rs  registry_encrypted.rs  vault_sync.rs
xtask/: Cargo.toml
xtask/src/: main.rs
