[package]
name = "xtask"
description = "Development task runner for the obsidian-ee workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
