[package]
name = "collab-cli"
description = "CLI client for collaborative document editing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "collab-cli"
path = "src/main.rs"

[dependencies]
collab-core = { path = "../collab-core" }
collab-proto = { path = "../collab-proto" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
