[package]
name = "collab-core"
description = "Core collaboration engine with Yrs CRDT and MLS encryption"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
yrs.workspace = true
openmls.workspace = true
openmls_rust_crypto.workspace = true
openmls_basic_credential.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
