[package]
name = "collab-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for collaborative editing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
yrs = "0.22"
js-sys = "0.3"
# For simplified encryption (MVP) - will be replaced with MLS later
aes-gcm = "0.10"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Crypto", "SubtleCrypto"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]
