[package]
name = "collab-wasm"
description = "WebAssembly bindings for collaborative editing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
yrs.workspace = true
js-sys = "0.3"
# For simplified encryption (MVP) - will be replaced with MLS later
aes-gcm = "0.10"

[dependencies.web-sys]
workspace = true
features = ["console", "Crypto", "SubtleCrypto"]

[dependencies.getrandom]
workspace = true
