[package]
name = "e2e-tests"
description = "End-to-end tests for the collaboration system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
collab-core = { path = "../../crates/collab-core" }
collab-relay = { path = "../../crates/collab-relay" }
collab-cli = { path = "../../crates/collab-cli" }
collab-proto = { path = "../../crates/collab-proto" }
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio-test.workspace = true

[lints]
workspace = true
